--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -108,8 +108,8 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Bingzhe Liu</a></strong>
             <br>
-<!--            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
-            <br>-->
+            Enhancing The Reliability of Modern Service Infrastructures in The Management Plane
+            <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign
             <br>
             Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
