--- a/travel.html
+++ b/travel.html
@@ -380,10 +380,15 @@ div.Section1
 						     <li>Custer, SD (2018) </li>
 						     <li>Denver, CO (2017) </li>
 						     <li>Des Moines, IA (2018) </li>
+						     <li>Duluth, MN (2022) </li>
+						     <li>Eau Claire, WI (2022) </li>
 						     <li>Elko, NV (2018) </li>
 						     <li>Farmington, PA (2013) </li>
 						     <li>Frankfort, KY (2021) </li>
 					             <li>Fremont, CA (2017-2018) </li>
+						     <li>Green Bay, WI (2022) </li>
+						     <li>Hibbing, MN (2022) </li>
+						     <li>Honolulu/O'ahu, HI (2022) </li>
 						     <li>Indianapolis, IN (2021) </li>  
 						     <li>Irvine, CA (2016) </li>
 						     <li>Keystone, SD (2018) </li>
@@ -392,13 +397,15 @@ div.Section1
 						     <li>Lexington, KY (2021) </li>
 						     <li>Los Angeles, CA (2012, 2016) </li>
 						     <li>Louisville, KY (2021) </li>
+						     <li>Madison, WI (2022) </li>
 					             <li>Marshall, IN (2020) </li>
 						     <li>Menlo Park, CA (2017-2018) </li>
 						     <li>Millbrae, CA (2018)</li>
+					             <li>Milwaukee, WI (2022)</li>
                                                      <li>Monterey, CA (2015) </li>
 						     <li>Morro Bay, CA (2017) </li>
 						     <li>Newark, CA (2017-2018) </li>
-						     <li>New York City, NY (2017) </li>
+						     <li>New York City, NY (2017, 2022) </li>
 						     <li>Oakland, CA (2018) </li>
 						     <li>Omaha, NE (2018) </li>
 						     <li>Pasadena, CA (2015) </li>
@@ -427,6 +434,7 @@ div.Section1
 						     <li>State College, PA (2017) </li>
 						     <li>Sunnyvale, CA (2012, 2015) </li>
 						     <li>Urbana-Champaign, IL (2017)</li>
+						     <li>White Plains, NY (2022) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
