--- a/index.html
+++ b/index.html
@@ -464,9 +464,10 @@ rutha at illinois dot edu</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
                   <p class="STYLE223">2023
-		    OSDI,
+		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
 	            <a href="https://www.usenix.org/conference/nsdi23" target="_blank">NSDI</a>,
-		    Sigmetrics,
+	            <a href="https://dsn2023.dei.uc.pt/" target="_blank">DSN</a>,
+		    <a href="https://www.sigmetrics.org/sigmetrics2023/" target="_blank">Sigmetrics</a>,
           	  </p>
 		  <p class="STYLE223">2022
 	            <a href="https://www.systor.org/2022/" target="_blank">SYSTOR</a>,
