--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -110,7 +110,7 @@ td.papers {
             <br>
             Enhancing The Reliability of Modern Service Infrastructures in The Management Plane
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Nov. 2022.
             <br>
             Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
           </span>
@@ -128,7 +128,7 @@ td.papers {
             <br>
             Multi-objective Optimizations for Resource-efficient Large Scale Machine Learning Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim in Oct. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Oct. 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
@@ -146,7 +146,7 @@ td.papers {
             <br>
             Soft Real Time Resource Management for Vision Based Internet of Things Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Sep. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Sep. 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
@@ -164,7 +164,7 @@ td.papers {
             <br>
             Empowering Automated Mobile UI Testing With External Support
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Jun. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jun. 2022.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
           </span>
@@ -182,7 +182,7 @@ td.papers {
             <br>
             Attack Surface Reduction in Contemporary Operating Systems via Practical Kernel Debloating
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Apr. 13, 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 13, 2022.
             <br>
             Advisor: <a href="https://sibin.github.io/sibin" target="_blank">Sibin Mohan</a>
           </span>
@@ -200,7 +200,7 @@ td.papers {
             <br>
 	    New Architectures for Non-Volatile Memory Technologies
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Apr. 6, 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 6, 2022.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
           </span>
@@ -218,7 +218,7 @@ td.papers {
             <br>
                 Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Jan. 6, 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jan. 6, 2022.
             <br>
             Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
@@ -236,7 +236,7 @@ td.papers {
             <br>
                 Machine Learning For Achieving Dependability in Mission-Critical Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Oct. 14, 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 14, 2021.
             <br>
             Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
           </span>
@@ -254,7 +254,7 @@ td.papers {
             <br>
             Foundations for Practical Network Verification
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 27, 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 27, 2021.
             <br>
             Advisors: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a> and <a href="https://fsl.cs.illinois.edu/people/grigore-rosu/" target="_blank">Grigore Roşu</a>
           </span>
@@ -272,7 +272,7 @@ td.papers {
             <br>
             Software Testing in a Non-Deterministic World
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in June 24, 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on June 24, 2021.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
             <br>
@@ -292,7 +292,7 @@ td.papers {
             <br>
             <a href="https://www.ideals.illinois.edu/handle/2142/109565" target="_blank">Rethinking Computer Architecture and Operating System Abstractions for Good &amp; Evil</a>﻿
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in August 19, 2020.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on August 19, 2020.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
 	    <br>
@@ -314,7 +314,7 @@ td.papers {
             <br>
             <a href="https://www.ideals.illinois.edu/handle/2142/108600" target="_blank">Satisfying Service Level Objectives in Stream Processing Systems</a>
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 1, 2020.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 1, 2020.
             <br>
             Advisor: <a href="http://indy.cs.illinois.edu/" target="_blank">Indranil Gupta</a>
           </span>
@@ -333,7 +333,7 @@ td.papers {
               <a href="https://www.ideals.illinois.edu/handle/2142/109349" target="_blank">Utility-driven Optimization and Placement Framework for Visual IoT
               Analytics over Edge-cloud Environments</a>
               <br>
-              Department of Computer Science, University of Illinois at Urbana-Champaign, defended in May 8, 2020.
+              Department of Computer Science, University of Illinois at Urbana-Champaign, defended on May 8, 2020.
               <br>
               Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
             </span>
@@ -351,7 +351,7 @@ td.papers {
               <br>
               <a href="https://www.ideals.illinois.edu/handle/2142/108300" target="_blank">Practical Verification of Network Planes</a>
               <br>
-              Department of Computer Science, University of Illinois at Urbana-Champaign, defended in March 12, 2020.
+              Department of Computer Science, University of Illinois at Urbana-Champaign, defended on March 12, 2020.
               <br>
               Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
             </span>
