--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -203,6 +203,8 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 6, 2022.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+            <br>
+	    <font color="#C40233"><b>David J. Kuck Outstanding PhD Thesis Award</b></font>
           </span>
         </div>
       </td>
