--- a/pub.html
+++ b/pub.html
@@ -61,6 +61,22 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	<tr>
+		<td class="date"><font color="#083b89">ICSE'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Test Selection for Unified Regression Testing</strong> [<a href="pub/urts.pdf" target="_blank">pdf</a> | <a href="pub/urts_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Shuai Wang, Xinyu Lian, Darko Marinov, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 45th IEEE/ACM International Conference on Software Engineering (<font color="#083b89"><b>ICSE'23</b></font>), Melbourne, Australia, May 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">HPCA'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
