--- a/pub.html
+++ b/pub.html
@@ -61,6 +61,22 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	<tr>
+		<td class="date"><font color="#083b89">NSDI'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Push-Button Reliability Testing for Cloud-Backed Applications with Rainmaker</strong> [<a href="pub/rainmaker.pdf" target="_blank">pdf</a> | <a href="pub/rainmaker_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yinfang Chen, Xudong Sun, Suman Nath, Ze Yang, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 20th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'23</b></font>), Boston, MA, April 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
+	<tr>
 		<td class="date"><font color="#083b89">ICSE'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
