--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		<br>
 		<b>$ echo <font color="#E84A27">"Please consider contributing to <a href="https://www.sigops.org/blog/", target="_blank">SIGOPS Blog</a>."</font></b>
 		<br>
+		<b>$ echo <font color="#E84A27">"I'll be teaching <a href="https://cs523-uiuc.github.io/", target="_blank">cs523 Advanced OS</a>."</font></b>
+		<br>
 		<b>$ echo <font color="#E84A27">"I co-organize <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC Systems Reading Group</a> and <a href="https://wiki.illinois.edu/wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a>."</font></b>
 		</TD>
     </TR>
