--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://cs523-uiuc.github.io/fall19/" target="_blank">Fall 19</a>) 
 									(<a href="https://cs523-uiuc.github.io/fall20/" target="_blank">Fall 20</a>)
 									(<a href="https://cs523-uiuc.github.io/fall21/" target="_blank">Fall 21</a>)
+									(<a href="https://cs523-uiuc.github.io/spring23/" target="_blank">Spring 23</a>)
 								</p>
 								<p class="STYLE223">CS 423: Operating System Design
 									(<a href="https://cs423-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
@@ -372,7 +373,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://systems-seminar-uiuc.github.io/spring21/" target="_blank">Spring 21</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/fall21/" target="_blank">Fall 21</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/spring22/" target="_blank">Spring 22</a>)
-									(<a href="https://systems-seminar-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)	
+									(<a href="https://systems-seminar-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/spring23/" target="_blank">Spring 23</a>)	
 								</p>
 								<p class="STYLE223">CS 591(SE): Software Engineering Seminar
 									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 19</a>)
