--- a/travel.html
+++ b/travel.html
@@ -362,6 +362,7 @@ div.Section1
 						     <li>Alexandria, VA (2018) </li>
 						     <li>Annapolis, MD (2017) </li>
 					             <li>Arlington, VA (2018) </li>
+					             <li>Ashland, WI (2022) </li>
 						     <li>Atlanta, GA (2017) </li>
 						     <li>Baltimore, MD (2017) </li>
 						     <li>Berkeley, CA (2015, 2018) </li>
@@ -386,12 +387,14 @@ div.Section1
 						     <li>Farmington, PA (2013) </li>
 						     <li>Frankfort, KY (2021) </li>
 					             <li>Fremont, CA (2017-2018) </li>
+						     <li>Gatlinburg, TN (2022) </li>
 						     <li>Green Bay, WI (2022) </li>
 						     <li>Hibbing, MN (2022) </li>
 						     <li>Honolulu/O'ahu, HI (2022) </li>
 						     <li>Indianapolis, IN (2021) </li>  
 						     <li>Irvine, CA (2016) </li>
 						     <li>Keystone, SD (2018) </li>
+						     <li>Knoxville, TN (2022) </li>
 						     <li>Lake Tahoe, CA / NV (2018) </li>
 						     <li>Laramie, WY (2018) </li>
 						     <li>Lexington, KY (2021) </li>
@@ -404,6 +407,7 @@ div.Section1
 					             <li>Milwaukee, WI (2022)</li>
                                                      <li>Monterey, CA (2015) </li>
 						     <li>Morro Bay, CA (2017) </li>
+						     <li>Nashville, TN (2022) </li>
 						     <li>Newark, CA (2017-2018) </li>
 						     <li>New York City, NY (2017, 2022) </li>
 						     <li>Oakland, CA (2018) </li>
