--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	            <a href="https://www.usenix.org/conference/nsdi23" target="_blank">NSDI</a>,
 	            <a href="https://dsn2023.dei.uc.pt/" target="_blank">DSN</a>,
 		    <a href="https://www.sigmetrics.org/sigmetrics2023/" target="_blank">Sigmetrics</a>,
+		    <a href="https://2023.esec-fse.org/track/fse-2023-industry" target="_blank">ESEC/FSE Industry Track</a>,
           	  </p>
 		  <p class="STYLE223">2022
 	            <a href="https://www.systor.org/2022/" target="_blank">SYSTOR</a>,
