--- a/pub.html
+++ b/pub.html
@@ -61,6 +61,22 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	<tr>
+		<td class="date"><font color="#083b89">EuroSys'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Fail through the Cracks: Cross-System Interaction Failures in Modern Cloud Systems</strong> [<a href="pub/csi.pdf" target="_blank">pdf</a> | <a href="pub/csi_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Lilia Tang, Chaitanya Bhandari, Yongle Zhang, Anna Karanika, Shuyang Ji, Indranil Gupta, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 18th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'23</b></font>), Rome, Italy, May 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>	  
+
+	<tr>
 		<td class="date"><font color="#083b89">NSDI'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
