--- a/pub.html
+++ b/pub.html
@@ -107,6 +107,22 @@ td.papers {
 				  </div>
 		  </td>
 	</tr>
+	  
+	<tr>
+		<td class="date"><font color="#083b89">WWW'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Visual-Aware Testing and Debugging for Web Performance Optimization</strong> [<a href="pub/vetter.pdf" target="_blank">pdf</a> | <a href="pub/vetter_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Xinlei Yang, Wei Liu, Hao Lin, Zhenhua Li, Feng Qian, Xianlong Wang, and Tianyin Xu
+						  <br>
+						  To Appear In Proceedings of the ACM Web Conference (<font color="#083b89"><b>WWW'23</b></font>), Austin, Texas, Apr 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
 
 	<tr>
 		<td class="date"><font color="#083b89">HPCA'23</font></td>
