It feels great that Anna wants to be listed.

--- a/index.html
+++ b/index.html
@@ -540,8 +540,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
-				      -->
 				                                <p class="STYLE223"><a href="https://whentojump.xyz/" target="_blank">Wentao Zhang</a>, MS student (SJTU) (Summer 2022 - now)</p>
+--> 
+				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, Undergrad student (ZJUI) (Summer 2021 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Feiran (Alex) Qin</a>, Undergrad student (UIUC/ShanghaiTech) (Fall 2022 - now)</p>
