--- a/index.html
+++ b/index.html
@@ -529,26 +529,26 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a>, PhD student (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Lilia Tang</a>, PhD student (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD student (Fall 2021 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yinfang Chen</a>, PhD student (Fall 2021 - now), currently on leave till Fall 2023</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD student (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shuai Wang</a>, PhD student (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
 								<p class="STYLE223"><a href="https://maknee.github.io/" target="_blank">Henry Zhu</a>, PhD student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
 				                                <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS student (Fall 2021 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
 								<p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS student (Fall 2021 - now)</p>
-				      <!--
 								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
+				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
+				      <!--
 				                                <p class="STYLE223"><a href="https://whentojump.xyz/" target="_blank">Wentao Zhang</a>, MS student (SJTU) (Summer 2022 - now)</p>
 --> 
-				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, Undergrad student (ZJUI) (Summer 2021 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Feiran (Alex) Qin</a>, Undergrad student (UIUC/ShanghaiTech) (Fall 2022 - now)</p>
 								<!-- <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yifei Song</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p> -->
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Muhammad Taha</a>, Undergrad student (LUMS) (Summer 2022 - now)</p>
+				      <!--
 								<p class="STYLE223"><a href="https://tseyanghub.github.io/" target="_blank">Ze Yang</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
+				      -->
                              </TD>
                           </TR>
 
@@ -559,6 +559,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yinfang Chen</a>, PhD student, currently on leave</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, research scholar, 2021--2022 &rarr; UIUC (MS)</p> 
