--- a/pub.html
+++ b/pub.html
@@ -102,7 +102,7 @@ td.papers {
 						  <br>
 						  Shuai Wang, Xinyu Lian, Darko Marinov, and Tianyin Xu
 						  <br>
-						  To Appear In Proceedings of the 45th IEEE/ACM International Conference on Software Engineering (<font color="#083b89"><b>ICSE'23</b></font>), Melbourne, Australia, May 2023.
+						  In Proceedings of the 45th IEEE/ACM International Conference on Software Engineering (<font color="#083b89"><b>ICSE'23</b></font>), Melbourne, Australia, May 2023.
 					  </span>
 				  </div>
 		  </td>
