--- a/pub.html
+++ b/pub.html
@@ -103,6 +103,8 @@ td.papers {
 						  Shuai Wang, Xinyu Lian, Darko Marinov, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 45th IEEE/ACM International Conference on Software Engineering (<font color="#083b89"><b>ICSE'23</b></font>), Melbourne, Australia, May 2023.
+						  <br>
+						  Code/data: <a href="https://github.com/xlab-uiuc/uRTS-ae" target="_blank">uRTS-ae</a>
 					  </span>
 				  </div>
 		  </td>
