--- a/pub.html
+++ b/pub.html
@@ -118,9 +118,9 @@ td.papers {
 						  <span style="font-size: 12pt;">
 						  <strong>Visual-Aware Testing and Debugging for Web Performance Optimization</strong> [<a href="pub/vetter.pdf" target="_blank">pdf</a> | <a href="pub/vetter_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Xinlei Yang, Wei Liu, Hao Lin, Zhenhua Li, Feng Qian, Xianlong Wang, and Tianyin Xu
+						  Xinlei Yang, Wei Liu, Hao Lin, Zhenhua Li, Feng Qian, Xianlong Wang, Yunhao Liu, and Tianyin Xu
 						  <br>
-						  To Appear In Proceedings of the ACM Web Conference (<font color="#083b89"><b>WWW'23</b></font>), Austin, Texas, Apr 2023.
+						  In Proceedings of the 32th ACM Web Conference (<font color="#083b89"><b>WWW'23</b></font>), Austin, Texas, Apr 2023.
 					  </span>
 				  </div>
 		  </td>
