--- a/pub.html
+++ b/pub.html
@@ -121,6 +121,8 @@ td.papers {
 						  Xinlei Yang, Wei Liu, Hao Lin, Zhenhua Li, Feng Qian, Xianlong Wang, Yunhao Liu, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 32th ACM Web Conference (<font color="#083b89"><b>WWW'23</b></font>), Austin, Texas, Apr 2023.
+						  <br>
+						  Code/data: <a href="https://github.com/Web-Distortion/Vetter" target="_blank">Vetter</a>
 					  </span>
 				  </div>
 		  </td>
