--- a/pub.html
+++ b/pub.html
@@ -161,6 +161,26 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">arXiv</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Programmable System Call Security with eBPF</strong> [<a href="pub/seccomp-ebpf.pdf" target="_blank">pdf</a> | <a href="pub/seccomp-ebpf_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jinghao Jia, YiFei Zhu, Dan Williams, Andrea Arcangeli, Claudio Canella, Hubertus Franke, Tobin Feldman-Fitzthum, Dimitrios Skarlatos, Daniel Gruss, and Tianyin Xu
+						  <br>
+						  arXiv:2302.10366 Feb 2023.
+						  <br>
+						  Code: 
+						  <br>
+						  <font color="#C40233"><b>Presented at Linux Plumbers Conference (LPC) 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
+	<tr>
 		<td class="date"><font color="#083b89">Sigcomm'22</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
