--- a/pub.html
+++ b/pub.html
@@ -170,7 +170,7 @@ td.papers {
 						  <br>
 						  Jinghao Jia, YiFei Zhu, Dan Williams, Andrea Arcangeli, Claudio Canella, Hubertus Franke, Tobin Feldman-Fitzthum, Dimitrios Skarlatos, Daniel Gruss, and Tianyin Xu
 						  <br>
-						  arXiv:2302.10366 Feb 2023.
+						  arXiv:2302.10366, Feb 2023.
 						  <br>
 						  Code: 
 						  <br>
