--- a/pub.html
+++ b/pub.html
@@ -172,7 +172,7 @@ td.papers {
 						  <br>
 						  arXiv:2302.10366, Feb 2023.
 						  <br>
-						  Code: 
+						  Code: <a href="https://github.com/xlab-uiuc/seccomp-ebpf-upstream" target="_blank">seccomp-ebpf-upstream</a>
 						  <br>
 						  <font color="#C40233"><b>Presented at Linux Plumbers Conference (LPC) 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
 					  </span>
