--- a/pub.html
+++ b/pub.html
@@ -174,7 +174,7 @@ td.papers {
 						  <br>
 						  Code: <a href="https://github.com/xlab-uiuc/seccomp-ebpf-upstream" target="_blank">seccomp-ebpf-upstream</a>
 						  <br>
-						  <font color="#C40233"><b>Presented at Linux Plumbers Conference (LPC) 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
+						  <font color="#C40233"><b>Presented at Linux Plumbers Conference 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
 					  </span>
 				  </div>
 		  </td>
