--- a/travel.html
+++ b/travel.html
@@ -230,6 +230,7 @@ div.Section1
 						     <li>Kaiserslautern (2017) </li>
 						     <li>Lindau (2010) </li>
 						     <li>Magdeburg (2011) </li>
+						     <li>Mettlach (2023) </li>
 						     <li>Munich (2010, 2011) </li>
 						     <li>Münster (2011) </li>
 						     <li>Nördlingen (2010) </li>
@@ -237,6 +238,7 @@ div.Section1
 						     <li>Potsdam (2011) </li>
 						     <li>Regensburg (2010) </li>
 						     <li>Trier (2011) </li>
+						     <li>Wadern (2023) </li>
 						     <li>Wolfenbüttel (2010) </li>
 						     <li>Würzburg (2010) </li>
                                                   </ul>
