--- a/pub.html
+++ b/pub.html
@@ -70,7 +70,7 @@ td.papers {
 						  <br>
 						  Lilia Tang, Chaitanya Bhandari, Yongle Zhang, Anna Karanika, Shuyang Ji, Indranil Gupta, and Tianyin Xu
 						  <br>
-						  To Appear In Proceedings of the 18th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'23</b></font>), Rome, Italy, May 2023.
+						  In Proceedings of the 18th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'23</b></font>), Rome, Italy, May 2023.
 					  </span>
 				  </div>
 		  </td>
@@ -86,7 +86,7 @@ td.papers {
 						  <br>
 						  Yinfang Chen, Xudong Sun, Suman Nath, Ze Yang, and Tianyin Xu
 						  <br>
-						  To Appear In Proceedings of the 20th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'23</b></font>), Boston, MA, April 2023.
+						  In Proceedings of the 20th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'23</b></font>), Boston, MA, April 2023.
 					  </span>
 				  </div>
 		  </td>
