Gibson City with Darko, Daniella, Lara, and Fei

--- a/travel.html
+++ b/travel.html
@@ -390,6 +390,7 @@ div.Section1
 						     <li>Frankfort, KY (2021) </li>
 					             <li>Fremont, CA (2017-2018) </li>
 						     <li>Gatlinburg, TN (2022) </li>
+						     <li>Gibson City, IL (2023) </li>
 						     <li>Green Bay, WI (2022) </li>
 						     <li>Hibbing, MN (2022) </li>
 						     <li>Honolulu/O'ahu, HI (2022) </li>
