--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
 	          <p class="STYLE223">
-	              Co-lead of Infrastructure for Trusted and Confidential Computing at <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/" target="_blank">IIDAI Center</a>
+	              Co-lead of Infrastructure for Trusted and Confidential Computing at <a href="https://discoveryacceleratorinstitute.grainger.illinois.edu/" target="_blank">IIDAI</a>
 	          </p>
 		  <p class="STYLE223">
 	              Co-editor of <a href="https://www.sigops.org/blog/" target="_blank">SIGOPS Blog</a>
