--- a/pub.html
+++ b/pub.html
@@ -61,6 +61,22 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	<tr>
+		<td class="date"><font color="#083b89">ISCA'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>MXFaaS: Resource Sharing in Serverless Environments for Parallelism and Efficiency</strong> [<a href="pub/mxfaas.pdf" target="_blank">pdf</a> | <a href="pub/mxfaas_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jovan Stojkovic, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
+						  <br>
+						  In Proceedings of the 50th Annual International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'23</b></font>), Orlando, FL, June 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
+	<tr>
 		<td class="date"><font color="#083b89">EuroSys'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
