requested by a few folks

--- a/pub.html
+++ b/pub.html
@@ -66,7 +66,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Fail through the Cracks: Cross-System Interaction Failures in Modern Cloud Systems</strong> [<a href="pub/csi.pdf" target="_blank">pdf</a> | <a href="pub/csi_bib.txt" target="_blank">bib</a>]
+						  <strong>Fail through the Cracks: Cross-System Interaction Failures in Modern Cloud Systems</strong> [<a href="pub/csi-failures.pdf" target="_blank">pdf</a> | <a href="pub/csi-failures_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Lilia Tang, Chaitanya Bhandari, Yongle Zhang, Anna Karanika, Shuyang Ji, Indranil Gupta, and Tianyin Xu
 						  <br>
