--- a/pub.html
+++ b/pub.html
@@ -87,6 +87,8 @@ td.papers {
 						  Lilia Tang, Chaitanya Bhandari, Yongle Zhang, Anna Karanika, Shuyang Ji, Indranil Gupta, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 18th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'23</b></font>), Rome, Italy, May 2023.
+						  <br>
+						  Data/code: <a href="https://github.com/xlab-uiuc/csi-ae" target="_blank">https://github.com/xlab-uiuc/csi-ae</a>
 					  </span>
 				  </div>
 		  </td>
@@ -104,7 +106,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 20th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'23</b></font>), Boston, MA, April 2023.
 						  <br>
-						  Code: <a href="https://github.com/xlab-uiuc/rainmaker" target="_blank">rainmaker</a>
+						  Code: <a href="https://github.com/xlab-uiuc/rainmaker" target="_blank">https://github.com/xlab-uiuc/rainmaker</a>
 					  </span>
 				  </div>
 		  </td>
@@ -122,7 +124,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 45th IEEE/ACM International Conference on Software Engineering (<font color="#083b89"><b>ICSE'23</b></font>), Melbourne, Australia, May 2023.
 						  <br>
-						  Code/data: <a href="https://github.com/xlab-uiuc/uRTS-ae" target="_blank">uRTS-ae</a>
+						  Code/data: <a href="https://github.com/xlab-uiuc/uRTS-ae" target="_blank">https://github.com/xlab-uiuc/uRTS-ae</a>
 					  </span>
 				  </div>
 		  </td>
@@ -140,7 +142,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 32th ACM Web Conference (<font color="#083b89"><b>WWW'23</b></font>), Austin, Texas, Apr 2023.
 						  <br>
-						  Code/data: <a href="https://github.com/Web-Distortion/Vetter" target="_blank">Vetter</a>
+						  Code/data: <a href="https://github.com/Web-Distortion/Vetter" target="_blank">https://github.com/Web-Distortion/Vetter</a>
 					  </span>
 				  </div>
 		  </td>
@@ -190,7 +192,7 @@ td.papers {
 						  <br>
 						  arXiv:2302.10366, Feb 2023.
 						  <br>
-						  Code: <a href="https://github.com/xlab-uiuc/seccomp-ebpf-upstream" target="_blank">seccomp-ebpf-upstream</a>
+						  Code: <a href="https://github.com/xlab-uiuc/seccomp-ebpf-upstream" target="_blank">https://github.com/xlab-uiuc/seccomp-ebpf-upstream</a>
 						  <br>
 						  <font color="#C40233"><b>Presented at Linux Plumbers Conference 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
 					  </span>
@@ -211,8 +213,8 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2022 Annual Conference of the ACM Special Interest Group on Data Communication (<font color="#083b89"><b>Sigcomm'22</b></font>), Amsterdam, Netherlands, August 2022.
 					      <br>
-						  Code/data: <a href="https://mobilebandwidth.github.io/" target="_blank">Swiftest</a>
-                          <br>
+						  Code/data: <a href="https://mobilebandwidth.github.io/" target="_blank">https://mobilebandwidth.github.io/</a>
+                                              <br>
                           <a href="pub/swiftest_review.pdf" target="_blank">Public review</a>
 					  </span>
 				  </div>
@@ -231,7 +233,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
-						  Code/data: <a href="https://github.com/sieve-project/sieve" target="_blank">Sieve</a> (<a href="https://github.com/sieve-project/sieve/tree/osdi-ae" target="_blank">research artifact<a>)
+						  Code/data: <a href="https://github.com/sieve-project/sieve" target="_blank">https://github.com/sieve-project/sieve</a> (<a href="https://github.com/sieve-project/sieve/tree/osdi-ae" target="_blank">research artifact<a>)
 						  <br>
 						  <font color="#C40233">
 					            <b>Covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a> 
@@ -262,7 +264,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
-						  Code/data: <a href="https://github.com/TrinityEmulator" target="_blank">TrinityEmulator</a>
+						  Code/data: <a href="https://github.com/TrinityEmulator" target="_blank">https://github.com/TrinityEmulator</a>
 					  </span>
 				  </div>
 		  </td>
@@ -280,7 +282,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
 						  <br>
-						  Code/data: <a href="https://github.com/xlab-uiuc/depfast" target="_blank">DepFast</a> (<a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">research artifact</a>)
+						  Code/data: <a href="https://github.com/xlab-uiuc/depfast" target="_blank">https://github.com/xlab-uiuc/depfast</a> (<a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">research artifact</a>)
 					  </span>
 				  </div>
 		  </td>
@@ -298,7 +300,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 17th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'22</b></font>), Rennes, France, Apr. 2022.
 					          <br>
-						  Code/data: <a href="https://github.com/xlab-uiuc/eurosys-kfuse-artifact" target="_blank">kfuse</a>
+						  Code/data: <a href="https://github.com/xlab-uiuc/eurosys-kfuse-artifact" target="_blank">https://github.com/xlab-uiuc/eurosys-kfuse-artifact</a>
 					  </span>
 				  </div>
 		  </td>
@@ -382,7 +384,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2021 Annual Conference of the ACM Special Interest Group on Data Communication (<font color="#083b89"><b>Sigcomm'21</b></font>), Virtual Event, August 2021.
 					          <br>
-						  Code/data: <a href="https://cellularreliability.github.io/" target="_blank">Android-MOD</a>
+						  Code/data: <a href="https://cellularreliability.github.io/" target="_blank">https://cellularreliability.github.io/</a>
                                                   <br>
                                                   <a href="pub/cellular_reliability_public_review.pdf" target="_blank">Public review</a>
 					          <br>
@@ -404,7 +406,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 30th ACM SIGSOFT International Symposium on Software Testing and Analysis (<font color="#083b89"><b>ISSTA'21</b></font>), Virtual Event, July 2021.
 					          <br>
-						  Code/data: <a href="https://github.com/xlab-uiuc/ctest_prio_art" target="_blank">ctest_prio</a>
+						  Code/data: <a href="https://github.com/xlab-uiuc/ctest_prio_art" target="_blank">https://github.com/xlab-uiuc/ctest_prio_art</a>
 						  <br>
 						  <font color="#C40233"><b>SIGSOFT Distinguished Paper Award</b></font>
 					  </span>
@@ -455,7 +457,7 @@ td.papers {
 						<br>
 						In Proceedings of the 43rd International Conference on Software Engineering (<font color="#083b89"><b>ICSE'21</b></font>), Virtual Event, May 2021.
 						<br>
-						Code/data: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
+						Code/data: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">https://github.com/xlab-uiuc/open-cevo</a>
 					</span>
 				</div>
 		</td>
@@ -473,7 +475,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'21</b></font>), Virtual Event, April 2021.
 						<br>
-						Code/data: <a href="http://fastbts.thucloud.com/" target="_blank">fastbts</a>
+						Code/data: <a href="http://fastbts.thucloud.com" target="_blank">http://fastbts.thucloud.com</a>
 					</span>
 				</div>
 		</td>
@@ -491,7 +493,7 @@ td.papers {
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Code/data: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
+						Code/data: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">https://github.com/xlab-uiuc/openctest</a>
 					</span>
 				</div>
 		</td>
@@ -509,7 +511,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Code/data: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
+						Code/data: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">https://github.com/xlab-uiuc/cdep-fse</a>
 					</span>
 				</div>
 		</td>
@@ -584,7 +586,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Virtual Event, June 2020.
 						<br>
-						Code/data: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
+						Code/data: <a href="https://github.com/hckuo/Cozart" target="_blank">https://github.com/hckuo/Cozart</a>
 						<br>
 						<font color="#C40233"><b>Cozart is selected as a CACM Research Highlight article: <a href="pub/cozart-cacm.pdf" target="_blank">pdf</a></b></font>
 					</span>
@@ -604,7 +606,7 @@ td.papers {
 						<br>
 						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Virtual Event, Mar. 2020.
 						<br>
-						Code/data: <a href="https://github.com/dskarlatos/ElasticCuckooHashing" target="_blank">elastic cuckoo hashing</a>
+						Code/data: <a href="https://github.com/dskarlatos/ElasticCuckooHashing" target="_blank">https://github.com/dskarlatos/ElasticCuckooHashing</a>
 						<br>
 						<font color="#C40233"><b>Best Paper Award</b></font>
 						<br>
@@ -626,7 +628,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 2020.
 						<br>
-						Code/data: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
+						Code/data: <a href="https://ufc2.github.io" target="_blank">https://ufc2.github.io</a>
 					</span>
 				</div>
 		</td>
@@ -645,7 +647,7 @@ td.papers {
     						<br>
     						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 2019.
 						<br>
-						Code/data: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">tcdt</a>
+						Code/data: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">https://github.com/EvonX/TimeChangingDecisionTree</a>
     					</span>
     			</div>
     	</td>
